--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon -w routes  -w . -w static -w views -w utils app.js"
+    "start": "nodemon -w routes  -w routes/sandbox -w . -w static -w views -w utils app.js"
   },
   "dependencies": {
     "express": "3.x",
